--- a/Application/Back/View/Public/all.html
+++ b/Application/Back/View/Public/all.html
@@ -42,10 +42,11 @@
     <ul>
       <li><a href="<?=U('back/pt/zhichu');?>"><i class="articleCat"></i><em>财务支出</em></a></li>
     </ul>
-    
-      <li><a href="<?=U('back/index/shoplist');?>"><i class="productCat"></i><em>店铺列表</em></a></li>
+    <ul>
+      <li><a href="<?=U('back/index/shoplist');?>"><i class="productCat"></i><em>店铺列表</em></a></li></ul>
+      <ul>
       <li><a href="<?=U('back/pt/goodslist');?>"><i class="product"></i>
-      <em>商品列表</em></a></li>
+      <em>商品列表</em></a></li></ul>
      
     
     </ul>
