--- a/Application/Index/View/Pay/detail.html
+++ b/Application/Index/View/Pay/detail.html
@@ -41,10 +41,10 @@
 		<div class="notes">
 			<h6>购买须知</h6>
 			<div class="term">
-				<div class="title">有效期</div>
+				<!-- <div class="title">有效期</div>
 				<ul>
 					<li>购买后30天有效</li>
-				</ul>
+				</ul> -->
 				<?php echo $data[0]['goodnotice'];?>
 			</div>
 			<div class="import">
