--- a/Public/Wap/css/reset.css
+++ b/Public/Wap/css/reset.css
@@ -42,9 +42,9 @@ a {
     text-decoration: none;
 }
 
-a:hover {
+/*a:hover {
     text-decoration: underline;
-}
+}*/
 
 blockquote, q {
     quotes: none;
